clang/test/BSC/Negative/Trait/r3/define_trait_in_func/define_trait_in_func.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int bar() {
    _Trait F {                         // expected-error {{_Trait is only allowed to be defined at top-level}} 
                                      // expected-error@-1 {{expected identifier or '('}}
        int foo(This* this, int a);
    };
}